# nino-backend

./: .dockerignore  .env.example  Dockerfile  Procfile  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements-railway.txt
frontend/: streamlit_app.py
src/chatbot_api/: __init__.py
src/chatbot_api/api/: main.py
src/chatbot_api/core/: config.py
src/chatbot_api/database/: database.py
src/chatbot_api/models/: database.py  schemas.py
src/chatbot_api/prompts/: legal_prompts.py
src/chatbot_api/services/: chatbot.py  document_service.py  optimized_chatbot.py
