[project]
name = "chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "joaomadruga" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "greenlet>=3.2.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]

[project.scripts]
chatbot-api = "chatbot_api:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
